fix overflow and add rem converter

--- a/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_Particular_Profesional.scss
+++ b/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_Particular_Profesional.scss
@@ -20,7 +20,7 @@
 .Particular-right,
 .Profesional-right {
   @include u-cormorant-regular;
-  font-size: 18px;
+  font-size: rem(18px);
   width: 100%;
   padding-left: 45px;
   z-index: 1;
@@ -38,7 +38,7 @@
   .Particular-link {
     a {
       display: inline-block;
-      font-size: 13px;
+      font-size: rem(13px);
 
       &:not(:first-child) {
         margin-left: 30px;
@@ -62,7 +62,7 @@
   max-width: 2 * $col-size + 2 * $gutter-size;
   width: 100%;
   @include u-quentin-regular;
-  font-size: 30px;
+  font-size: rem(30px);
 }
 
 .Profesional-wrp .Section {
@@ -82,6 +82,7 @@
 
 .Particular-wrp {
   position: relative;
+  overflow: hidden;
 }
 
 .Particular::after {
@@ -90,7 +91,8 @@
   position: absolute;
   right: -55px;
   top: 65px;
-  padding: 68px 145px;
+  width: 320px;
+  height: 125px;
   background-repeat: no-repeat;
   mask-repeat: no-repeat;
   mask-image: url('/sites/sema-design/themes/cleverdrop/public/assets/svg/brush.svg');
